Partially fix #3